# kheish

./: .env.example  .gitignore  Cargo.toml  README.md
examples/001/: hope.txt
examples/code/: nosql.js  u002.py
examples/tasks/: audit-code.yaml  find-in-file.yaml
examples/tasks/audit-code/: README.md  audit-code.yaml
examples/tasks/audit-code-large/: README.md  task.yaml
examples/tasks/find-and-send-secret/: README.md  task.yaml
examples/tasks/find-in-file/: README.md  find-in-file.yaml
examples/tasks/hf-secret-finder/: README.md  task.yaml
examples/tasks/weather-blog-post/: task.yaml
exports/: README.md
logs/: README.md
migrations/2024-12-17-211042_create_tasks_table/: up.sql
migrations/2024-12-20-043721_create_task_outputs_table/: down.sql  up.sql
migrations/2024-12-23-044539_create_task_events_table/: up.sql
src/: cli.rs  constants.rs  errors.rs  event.rs  main.rs  schema.rs
src/agents/: agent_manager.rs  formatter.rs  mod.rs  proposer.rs  reviewer.rs  validator.rs
src/api/: errors.rs  handlers.rs  mod.rs  routes.rs  server.rs
src/config/: mod.rs  parser.rs
src/core/: mod.rs  rag.rs  task.rs  task_context.rs  task_generation.rs  task_manager.rs  task_state.rs  workflow.rs
src/core/manager/: message.rs  mod.rs  run.rs  task.rs  utils.rs
src/db/: mod.rs  models.rs  task_repository.rs
src/llm/: format_validator.rs  llm_client.rs  message.rs  mod.rs
src/modules/: fs_module.rs  http_module.rs  mem_module.rs  mod.rs  module_manager.rs  rag_module.rs  sh_module.rs  ssh_module.rs  vector_store.rs  web_module.rs
src/templates/: base_task.yaml
src/utils/: helpers.rs  logging.rs  mod.rs
(+24 files in other folders)
