[package]
name = "kheish"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
toml = "0.8.19"
thiserror = "2.0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "registry"]}
tracing-appender = "0.2.3"
dotenvy = "0.15.0"
chrono = "0.4.39"
url = "2.4.0"
indicatif = "0.17.0"

[profile.release]
lto = true
strip = true
codegen-units = 1